'automatic update of mvn version dependencies'

--- a/pom.xml
+++ b/pom.xml
@@ -46,16 +46,16 @@
 		<openMRSVersion>1.10.4</openMRSVersion>
 		<openMRSwebVersion>1.10.4</openMRSwebVersion>
 		<appframeworkVersion>2.9</appframeworkVersion>
-		<appuiVersion>1.6</appuiVersion>
+		<appuiVersion>1.7</appuiVersion>
 		<uicommonsVersion>1.8</uicommonsVersion>
-		<uiframeworkVersion>3.7</uiframeworkVersion>
+		<uiframeworkVersion>3.9</uiframeworkVersion>
 		<uilibraryVersion>1.5</uilibraryVersion>
 		<webservicesRestVersion>2.13</webservicesRestVersion>
-		<emrapiVersion>1.17-SNAPSHOT</emrapiVersion>
-		<reportingVersion>0.10.1</reportingVersion>
+		<emrapiVersion>1.18</emrapiVersion>
+		<reportingVersion>0.10.6</reportingVersion>
 		<calculationVersion>1.2</calculationVersion>
-		<serializationxstreamVersion>0.2.11</serializationxstreamVersion>
-		<providermanagementVersion>2.4</providermanagementVersion>
+		<serializationxstreamVersion>0.2.12</serializationxstreamVersion>
+		<providermanagementVersion>2.5.0</providermanagementVersion>
 	</properties>
 
 	<dependencies>
