--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<calculationVersion>1.2</calculationVersion>
 		<serializationxstreamVersion>0.2.12</serializationxstreamVersion>
 		<providermanagementVersion>2.5.0</providermanagementVersion>
+		<metadatamappingVersion>1.3.1</metadatamappingVersion>
 	</properties>
 
 	<dependencies>
@@ -179,6 +180,13 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>providermanagement-api</artifactId>
 			<version>${providermanagementVersion}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>metadatamapping-api</artifactId>
+			<version>${metadatamappingVersion}</version>
 			<scope>test</scope>
 		</dependency>
 
