--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>labtrackingapp</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Lab Tracking App</name>
 	<description>Tracks lab specimens and their results</description>
@@ -15,7 +14,8 @@
 		<connection>scm:git:git@github.com:PIH/openmrs-module-labtrackingapp.git</connection>
 		<developerConnection>scm:git:git@github.com:PIH/openmrs-module-labtrackingapp.git</developerConnection>
 		<url>https://github.com/PIH/openmrs-module-labtrackingapp/</url>
-	</scm>
+	  <tag>1.1.0-SNAPSHOT</tag>
+  </scm>
 
 	<distributionManagement>
 		<repository>
