--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>labtrackingapp</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>labtrackingapp-api</artifactId>
