UHM-6418, edit pathology order from the visit dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,6 @@
 omod/node
 omod/node_modules
 omod/src/main/webapp/resources/styles/lib/
+omod/src/main/compass/
 omod/.rubygems
 omod/.rubygems-provided
