--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,16 @@
 					<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.1.1</version>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+					<projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
+					<arguments>-DskipTests -Dmaven.javadoc.skip=true</arguments>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
