--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -23,8 +23,22 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
+        <!-- Begin OpenMRS core -->
+        <dependency>
+            <groupId>org.openmrs.web</groupId>
+            <artifactId>openmrs-web</artifactId>
+            <version>${openMRSVersion}</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
 
-		<!-- Begin OpenMRS core -->
+        <dependency>
+            <groupId>org.openmrs.web</groupId>
+            <artifactId>openmrs-web</artifactId>
+            <version>${openMRSVersion}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
